--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/http-client": "5.0.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "5.0.*",
+        "symfony/test-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/yaml": "5.0.*",
         "twig/intl-extra": "^3.0"
@@ -21,6 +23,7 @@
     "require-dev": {
         "symfony/debug-pack": "^1.0",
         "symfony/maker-bundle": "^1.15",
+        "symfony/phpunit-bridge": "^5.0",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
