--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "5.0.*",
+        "symfony/serializer-pack": "^1.0",
         "symfony/test-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/yaml": "5.0.*",
