--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,9 @@
 security:
     encoders:
         App\Entity\Admin:
-            algorithm: auto
+            algorithm: bcrypt
+        App\Entity\User:
+            algorithm: bcrypt
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
@@ -10,6 +12,7 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+
         # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
@@ -21,8 +24,16 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
+
             logout:
                 path: app_logout
+
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 2592000
+
+            switch_user: true
+
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -35,5 +46,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN_SALE }
+        - { path: ^/change-password, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/account, roles: IS_AUTHENTICATED_REMEMBERED }
         # - { path: ^/profile, roles: ROLE_USER }
