--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,7 +46,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN_SALE }
+        #- { path: ^/admin, roles: ROLE_ADMIN_SALE }
         - { path: ^/change-password, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/account, roles: IS_AUTHENTICATED_REMEMBERED }
         # - { path: ^/profile, roles: ROLE_USER }
