--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "5.0.*",
         "symfony/serializer-pack": "^1.0",
+        "symfony/swiftmailer-bundle": "^3.4",
         "symfony/test-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.0.*",
