--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "easycorp/easyadmin-bundle": "^2.3",
         "knplabs/knp-paginator-bundle": "^5.2",
         "sensio/framework-extra-bundle": "^5.5",
+        "stripe/stripe-php": "^7.37",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
